# openenv-pyre

./: .dockerignore  .gitignore  .hfignore  BLOG.md  BLOG_DRAFT.md  CLAUDE.md  README.md  __init__.py  client.py  evals.py  evals_hf.ipynb  models.py  openenv.yaml  package-lock.json  pyproject.toml  run_training_unsloth.sh  train_grpo_openenv.py
.cursor/: mcp.json
artifacts/: pyre_ppo_fixed.csv  pyre_ppo_fixed_eval.csv  pyre_ppo_hard_v2.csv  pyre_ppo_hard_v2_eval.csv
examples/: pyre_ppo_training.ipynb  random_agent.py  train_rl_agent.py  train_torch_ppo.py  train_torch_ppo_http.py
frontend/: README.md  index.html  vite.config.ts
frontend/js/: app.js  renderer.js  sim.js
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: APIReport.tsx  ControlPanel.tsx  HUD.tsx  Map2D.tsx  StatusCard.tsx
server/: Dockerfile  __init__.py  app.py  fire_sim.py  floor_plan.py  narrative.py  npc_model.py  pyre_env_environment.py  rubrics.py
server/static/: index.html  viewer_rpg.html
server/static/assets/: index-8TVqpTW-.css  index-CfBB90_b.js  index-DmWZ9HHA.js  index-S-HKcJzd.css  index-znkrwmi3.js
training/: push_to_hub.py
training/grpo/: train_grpo_openenv.py  train_grpo_unsloth.py
training/ppo/: debug_episode.py  pyre_ppo_training.ipynb  train_sb3_agent.py  train_torch_ppo.py  train_torch_ppo_http.py
