# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-pyre-env"
version = "0.1.0"
description = "Pyre — first-person crisis navigation environment for LLM agent RL training"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m pyre_env.server.app
server = "pyre_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["pyre_env", "pyre_env.server"]
package-dir = { "pyre_env" = ".", "pyre_env.server" = "server" }
