# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-pyre-env"
version = "0.1.0"
description = "Pyre — first-person crisis navigation environment for LLM agent RL training"
requires-python = ">=3.10,<3.14"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "datasets>=4.8.4",
    "peft>=0.15.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "transformers>=4.57.6",
    "trl>=1.2.0",
    "tornado>=6.5.5",
    "vllm>=0.11.0,<=0.18.0; sys_platform == 'linux'",
    "flashinfer-python==0.6.3; sys_platform == 'linux'",
    "flashinfer-cubin==0.6.3; sys_platform == 'linux'",
    "jupyter>=1.1.1",
    "flash-attn>=2.7.0; sys_platform == 'linux'",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m pyre_env.server.app
server = "pyre_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["pyre_env", "pyre_env.server"]
package-dir = { "pyre_env" = ".", "pyre_env.server" = "server" }

[tool.uv]
no-build-isolation-package = ["flash-attn"]